--- a/style/main.css
+++ b/style/main.css
@@ -442,6 +442,7 @@ html,
   body {
   --tw-bg-opacity: 1;
   background-color: rgb(248 249 250 / var(--tw-bg-opacity));
+  background-image: url("https://www.les-arbres-fruitiers.fr/wp-content/themes/les-arbres-fruitiers/images/grain.png");
 }
 
 body {
@@ -607,6 +608,10 @@ body {
   margin-right: auto;
 }
 
+.mb-10 {
+  margin-bottom: 2.5rem;
+}
+
 .mb-16 {
   margin-bottom: 4rem;
 }
@@ -643,10 +648,6 @@ body {
   margin-top: 2rem;
 }
 
-.mb-10 {
-  margin-bottom: 2.5rem;
-}
-
 .block {
   display: block;
 }
@@ -657,6 +658,10 @@ body {
 
 .grid {
   display: grid;
+}
+
+.contents {
+  display: contents;
 }
 
 .hidden {
@@ -679,6 +684,10 @@ body {
   min-height: 100svh;
 }
 
+.min-h-\[150px\] {
+  min-height: 150px;
+}
+
 .min-h-\[200px\] {
   min-height: 200px;
 }
@@ -693,14 +702,6 @@ body {
 
 .min-h-card_2_row_mobile {
   min-height: 18rem;
-}
-
-.min-h-\[300px\] {
-  min-height: 300px;
-}
-
-.min-h-\[150px\] {
-  min-height: 150px;
 }
 
 .w-48 {
@@ -735,6 +736,30 @@ body {
   width: 100%;
 }
 
+.w-\[400px\] {
+  width: 400px;
+}
+
+.w-\[50\%\] {
+  width: 50%;
+}
+
+.w-1\/6 {
+  width: 16.666667%;
+}
+
+.w-5\/6 {
+  width: 83.333333%;
+}
+
+.w-2\/6 {
+  width: 33.333333%;
+}
+
+.w-4\/6 {
+  width: 66.666667%;
+}
+
 .min-w-full {
   min-width: 100%;
 }
@@ -761,6 +786,22 @@ body {
 
 .basis-\[60\%\] {
   flex-basis: 60%;
+}
+
+.basis-2\/6 {
+  flex-basis: 33.333333%;
+}
+
+.basis-4\/6 {
+  flex-basis: 66.666667%;
+}
+
+.basis-1\/6 {
+  flex-basis: 16.666667%;
+}
+
+.basis-5\/6 {
+  flex-basis: 83.333333%;
 }
 
 .-translate-x-1\/2 {
@@ -799,6 +840,10 @@ body {
   flex-direction: column;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .items-center {
   align-items: center;
 }
@@ -819,6 +864,10 @@ body {
   gap: 0.25rem;
 }
 
+.gap-16 {
+  gap: 4rem;
+}
+
 .gap-2 {
   gap: 0.5rem;
 }
@@ -837,10 +886,6 @@ body {
 
 .gap-8 {
   gap: 2rem;
-}
-
-.gap-16 {
-  gap: 4rem;
 }
 
 .gap-x-12 {
@@ -890,6 +935,10 @@ body {
 
 .rounded-full {
   border-radius: 9999px;
+}
+
+.rounded-\[20px\] {
+  border-radius: 20px;
 }
 
 .bg-gray-1 {
@@ -1007,6 +1056,11 @@ body {
   line-height: 1.75rem;
 }
 
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1017,6 +1071,10 @@ body {
 
 .font-medium {
   font-weight: 500;
+}
+
+.uppercase {
+  text-transform: uppercase;
 }
 
 .leading-relaxed {
@@ -1049,6 +1107,11 @@ body {
   color: rgb(233 236 239 / var(--tw-text-opacity));
 }
 
+.text-gray-4 {
+  --tw-text-opacity: 1;
+  color: rgb(206 212 218 / var(--tw-text-opacity));
+}
+
 .text-gray-6 {
   --tw-text-opacity: 1;
   color: rgb(108 117 125 / var(--tw-text-opacity));
@@ -1062,16 +1125,6 @@ body {
 .text-gray-9 {
   --tw-text-opacity: 1;
   color: rgb(33 37 41 / var(--tw-text-opacity));
-}
-
-.text-gray-4 {
-  --tw-text-opacity: 1;
-  color: rgb(206 212 218 / var(--tw-text-opacity));
-}
-
-.text-gray-5 {
-  --tw-text-opacity: 1;
-  color: rgb(173 181 189 / var(--tw-text-opacity));
 }
 
 .opacity-0 {
@@ -1142,6 +1195,15 @@ body {
 
 .will-change-auto {
   will-change: auto;
+}
+
+@font-face {
+  font-family: "jokker";
+
+  font-weight: "bold";
+
+  src: url("fonts/jokker/jokker-bold/jokker-bold.woff2") format("woff2"),
+    url("fonts/jokker/jokker-bold/jokker-bold.woff") format("woff");
 }
 
 @font-face {
@@ -1622,6 +1684,111 @@ canvas {
   border-radius: 1em;
 }
 
+.em {
+  -webkit-text-stroke: 0.01em #212529;
+  color: transparent;
+}
+
+.selection\:bg-pink-300 *::-moz-selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 168 212 / var(--tw-bg-opacity));
+}
+
+.selection\:bg-pink-300 *::selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 168 212 / var(--tw-bg-opacity));
+}
+
+.selection\:bg-gray-9 *::-moz-selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 37 41 / var(--tw-bg-opacity));
+}
+
+.selection\:bg-gray-9 *::selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 37 41 / var(--tw-bg-opacity));
+}
+
+.selection\:bg-gray-1 *::-moz-selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 249 250 / var(--tw-bg-opacity));
+}
+
+.selection\:bg-gray-1 *::selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 249 250 / var(--tw-bg-opacity));
+}
+
+.selection\:text-gray-1 *::-moz-selection {
+  --tw-text-opacity: 1;
+  color: rgb(248 249 250 / var(--tw-text-opacity));
+}
+
+.selection\:text-gray-1 *::selection {
+  --tw-text-opacity: 1;
+  color: rgb(248 249 250 / var(--tw-text-opacity));
+}
+
+.selection\:text-gray-9 *::-moz-selection {
+  --tw-text-opacity: 1;
+  color: rgb(33 37 41 / var(--tw-text-opacity));
+}
+
+.selection\:text-gray-9 *::selection {
+  --tw-text-opacity: 1;
+  color: rgb(33 37 41 / var(--tw-text-opacity));
+}
+
+.selection\:bg-pink-300::-moz-selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 168 212 / var(--tw-bg-opacity));
+}
+
+.selection\:bg-pink-300::selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 168 212 / var(--tw-bg-opacity));
+}
+
+.selection\:bg-gray-9::-moz-selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 37 41 / var(--tw-bg-opacity));
+}
+
+.selection\:bg-gray-9::selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 37 41 / var(--tw-bg-opacity));
+}
+
+.selection\:bg-gray-1::-moz-selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 249 250 / var(--tw-bg-opacity));
+}
+
+.selection\:bg-gray-1::selection {
+  --tw-bg-opacity: 1;
+  background-color: rgb(248 249 250 / var(--tw-bg-opacity));
+}
+
+.selection\:text-gray-1::-moz-selection {
+  --tw-text-opacity: 1;
+  color: rgb(248 249 250 / var(--tw-text-opacity));
+}
+
+.selection\:text-gray-1::selection {
+  --tw-text-opacity: 1;
+  color: rgb(248 249 250 / var(--tw-text-opacity));
+}
+
+.selection\:text-gray-9::-moz-selection {
+  --tw-text-opacity: 1;
+  color: rgb(33 37 41 / var(--tw-text-opacity));
+}
+
+.selection\:text-gray-9::selection {
+  --tw-text-opacity: 1;
+  color: rgb(33 37 41 / var(--tw-text-opacity));
+}
+
 .hover\:scale-105:hover {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
@@ -1642,6 +1809,11 @@ canvas {
   .sm\:text-7xl {
     font-size: 4.5rem;
     line-height: 1;
+  }
+
+  .sm\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
 
@@ -1702,6 +1874,10 @@ canvas {
     min-height: 850px;
   }
 
+  .md\:min-h-\[auto\] {
+    min-height: auto;
+  }
+
   .md\:min-h-card_1_row {
     min-height: 22rem;
   }
@@ -1710,16 +1886,20 @@ canvas {
     min-height: 39rem;
   }
 
-  .md\:min-h-\[auto\] {
-    min-height: auto;
-  }
-
   .md\:w-72 {
     width: 18rem;
   }
 
   .md\:w-\[680px\] {
     width: 680px;
+  }
+
+  .md\:w-2\/6 {
+    width: 33.333333%;
+  }
+
+  .md\:w-4\/6 {
+    width: 66.666667%;
   }
 
   .md\:grid-cols-5 {
@@ -1779,14 +1959,14 @@ canvas {
     line-height: 2.25rem;
   }
 
-  .md\:text-lg {
-    font-size: 1.125rem;
-    line-height: 1.75rem;
-  }
-
   .md\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .md\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
   }
 }
 
