--- a/input.css
+++ b/input.css
@@ -40,7 +40,7 @@
   html,
   body {
     @apply bg-gray-1;
-    background-image: url("https://leptoscv.s3.eu-central-1.amazonaws.com/grain.avif");
+    background-image: url("https://leptoscv.s3.eu-central-1.amazonaws.com/grain.svg");
   }
 }
 
