--- a/style/main.css
+++ b/style/main.css
@@ -442,7 +442,7 @@ html,
   body {
   --tw-bg-opacity: 1;
   background-color: rgb(248 249 250 / var(--tw-bg-opacity));
-  background-image: url("https://leptoscv.s3.eu-central-1.amazonaws.com/grain.avif");
+  background-image: url("https://leptoscv.s3.eu-central-1.amazonaws.com/grain.svg");
 }
 
 *, ::before, ::after {
@@ -561,12 +561,20 @@ html,
   bottom: 1.25rem;
 }
 
+.left-0 {
+  left: 0px;
+}
+
 .left-1\/2 {
   left: 50%;
 }
 
 .left-5 {
   left: 1.25rem;
+}
+
+.top-0 {
+  top: 0px;
 }
 
 .top-1\/2 {
@@ -1083,6 +1091,10 @@ html,
   --tw-shadow: 0 0 #0000;
   --tw-shadow-colored: 0 0 #0000;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .transition-all {
